Fix button in dark mode

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -259,6 +259,12 @@ code {
     .article-preview {
         background: #222;
     }
+
+    .button {
+        background-color: #363636;
+        color: #fff;
+        border-color: transparent;
+    }
 }
 
 // borrowed from poligon
